Konfiguration angepasst, dass die App im Browser mit der URL www.meineurl.ch/formapp gestartet werden kann und ein Browserrefresh in irgend einem Pfad ohne 404 möglich ist.

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,11 +1,11 @@
 {
   "port": 8000,
-  "startPath": "superapp/index.html",
+  "startPath": "superapp/",
   "browser": "chrome",
   "files": [
     "build/**/*.{html,htm,css,js}"
   ],
       "server": {
-    "baseDir": "build"
+    "baseDir": "build/superapp"
   }
 }
